<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:dividerVertical"
        android:showDividers="middle">

        <LinearLayout
            android:id="@+id/linear_layout_time_A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/CustomTitleText"
                android:text="@string/teamA" />

            <TextView
                android:id="@+id/score_team_A"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:text="@string/score" />

            <Button
                android:id="@+id/touchdown_team_A"
                style="@style/CustomButtonStyle"
                android:drawableStart="@drawable/ic_looks_6_24dp"
                android:tag="TouchdownA"
                android:text="@string/touchdown" />

            <Button
                android:id="@+id/kickoff_team_A"
                style="@style/CustomButtonStyle"
                android:drawableStart="@drawable/ic_looks_one_24dp"
                android:tag="KickoffA"
                android:text="@string/kickoff"
                android:visibility="gone" />

            <Button
                android:id="@+id/conversion_team_A"
                style="@style/CustomButtonStyle"
                android:drawableStart="@drawable/ic_looks_two_24dp"
                android:tag="ConversionA"
                android:text="@string/conversion"
                android:visibility="gone" />

            <Button
                android:id="@+id/miss_team_A"
                style="@style/CustomButtonStyle"
                android:drawableStart="@drawable/ic_exposure_zero_24dp"
                android:tag="MissA"
                android:text="@string/miss"
                android:visibility="gone" />

            <Button
                android:id="@+id/field_goal_team_A"
                style="@style/CustomButtonStyle"
                android:drawableStart="@drawable/ic_looks_3_24dp"
                android:tag="FieldGoalA"
                android:text="@string/field_goal" />

            <Button
                android:id="@+id/safety_team_A"
                style="@style/CustomButtonStyle"
                android:drawableStart="@drawable/ic_looks_two_24dp"
                android:tag="SafetyA"
                android:text="@string/safety" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_time_B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/linear_layout_time_A"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/CustomTitleText"
                android:text="@string/teamB" />

            <TextView
                android:id="@+id/score_team_B"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:text="@string/score" />

            <Button
                android:id="@+id/touchdown_team_B"
                style="@style/CustomButtonStyle"
                android:drawableStart="@drawable/ic_looks_6_24dp"
                android:tag="TouchdownB"
                android:text="@string/touchdown" />

            <Button
                android:id="@+id/kickoff_team_B"
                style="@style/CustomButtonStyle"
                android:drawableStart="@drawable/ic_looks_one_24dp"
                android:tag="KickoffB"
                android:text="@string/kickoff"
                android:visibility="gone" />

            <Button
                android:id="@+id/conversion_team_B"
                style="@style/CustomButtonStyle"
                android:drawableStart="@drawable/ic_looks_two_24dp"
                android:tag="ConversionB"
                android:text="@string/conversion"
                android:visibility="gone" />

            <Button
                android:id="@+id/miss_team_B"
                style="@style/CustomButtonStyle"
                android:drawableStart="@drawable/ic_exposure_zero_24dp"
                android:tag="MissB"
                android:text="@string/miss"
                android:visibility="gone" />

            <Button
                android:id="@+id/field_goal_team_B"
                style="@style/CustomButtonStyle"
                android:drawableStart="@drawable/ic_looks_3_24dp"
                android:tag="FieldGoalB"
                android:text="@string/field_goal" />

            <Button
                android:id="@+id/safety_team_B"
                style="@style/CustomButtonStyle"
                android:drawableStart="@drawable/ic_looks_two_24dp"
                android:tag="SafetyB"
                android:text="@string/safety" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>